fixed distorted images

--- a/flask_app/static/css/dashboard.css
+++ b/flask_app/static/css/dashboard.css
@@ -53,6 +53,7 @@ body {
     height: 100px;
     border-radius: 25% 25% 5% 5%;
     border: 2px solid #05386B;
+    object-fit: cover;
 }
 
 .ltg-card {
